--- a/config/authorities/masters_papers_depts.yml
+++ b/config/authorities/masters_papers_depts.yml
@@ -38,8 +38,8 @@ terms:
   - id: Physician Assistant Program
     term: School of Medicine; Department of Allied Health Sciences; Physician Assistant Program
     active: true
-  - id: Public Health Leadership Program
-    term: Gillings School of Global Public Health; Public Health Leadership Program
+  - id: Department of Public Health Leadership and Practice
+    term: Gillings School of Global Public Health; Department of Public Health Leadership and Practice
     active: true
   - id: School of Information and Library Science
     term: School of Information and Library Science
