--- a/spec/fixtures/authorities/proquest_departments.yml
+++ b/spec/fixtures/authorities/proquest_departments.yml
@@ -207,7 +207,7 @@ terms:
   - id: Psychology
     term: Department of Psychology
   - id: Public Health Leadership
-    term: Public Health Leadership Program
+    term: Department of Public Health Leadership and Practice
   - id: Public Policy
     term: Department of Public Policy
   - id: Religious Studies
