--- a/config/authorities/proquest_departments.yml
+++ b/config/authorities/proquest_departments.yml
@@ -211,7 +211,7 @@ terms:
   - id: Psychology
     term: Department of Psychology
   - id: Public Health Leadership
-    term: Public Health Leadership Program
+    term: Department of Public Health Leadership and Practice
   - id: Public Policy
     term: Department of Public Policy
   - id: Religious Studies
