validate metadata on change for rich text fields

--- a/config/tinymce.yml
+++ b/config/tinymce.yml
@@ -47,6 +47,9 @@ rich_text:
     function (editor) {
       editor.on('change', function () {
         tinymce.triggerSave();
+        if (window.saveWorkControlInstance) {
+          window.saveWorkControlInstance.validateMetadata();
+        }
       });
     }
 
