--- a/config/authorities/departments.yml
+++ b/config/authorities/departments.yml
@@ -60,6 +60,10 @@ terms:
   term: Gillings School of Global Public Health; Carolina Global Breastfeeding Institute
   active: true
   short_label: Carolina Global Breastfeeding Institute
+- id: Carolina Health Informatics Program
+  term: Carolina Health Informatics Program
+  active: true
+  short_label: Carolina Health Informatics Program
 - id: Neurodevelopment Disorders Research Center
   term: School of Medicine; Neurodevelopment Disorders Research Center; Carolina Institute for Developmental Disabilities
   active: false
@@ -176,6 +180,10 @@ terms:
   term: School of Medicine; Center for Heart and Vascular Care
   active: true
   short_label: Center for Heart and Vascular Care
+- id: Center for Information, Technology, and Public Life
+  term: Center for Information, Technology, and Public Life
+  active: true
+  short_label: Center for Information, Technology, and Public Life
 - id: Center for Integrative Chemical Biology and Drug Discovery
   term: Eshelman School of Pharmacy; Center for Integrative Chemical Biology and Drug Discovery
   active: true
@@ -317,9 +325,9 @@ terms:
   active: true
   short_label: Curriculum in Russian and East European Studies
 - id: Curriculum in Toxicology
-  term: School of Medicine; Curriculum in Toxicology
+  term: School of Medicine; Curriculum in Toxicology and Environmental Medicine
   active: true
-  short_label: Curriculum in Toxicology
+  short_label: Curriculum in Toxicology and Environmental Medicine
 - id: CF/Pulmonary Research and Treatment Center
   term: School of Medicine; Cystic Fibrosis and Pulmonary Diseases Research and Treatment Center
   active: false
@@ -549,9 +557,9 @@ terms:
   active: true
   short_label: Department of Genetics
 - id: Department of Geography
-  term: College of Arts and Sciences; Department of Geography
+  term: College of Arts and Sciences; Department of Geography and Environment
   active: true
-  short_label: Department of Geography
+  short_label: Department of Geography and Environment
 - id: Department of Geological Sciences
   term: College of Arts and Sciences; Department of Geological Sciences
   active: true
@@ -908,6 +916,10 @@ terms:
   term: School of Medicine; Department of Allied Health Sciences; Division of Occupational Science and Occupational Therapy
   active: true
   short_label: Division of Occupational Science and Occupational Therapy
+- id: Division of Pediatric Dermatology
+  term: School of Medicine; Department of Dermatology; Division of Pediatric Dermatology
+  active: true
+  short_label: Division of Pediatric Dermatology
 - id: Division of Pharmaceutical Outcomes and Policy
   term: Eshelman School of Pharmacy; Division of Pharmaceutical Outcomes and Policy
   active: true
@@ -924,6 +936,14 @@ terms:
   term: School of Medicine; Department of Allied Health Sciences; Division of Physical Therapy
   active: true
   short_label: Division of Physical Therapy
+- id: Division of Plastic and Reconstructive Surgery
+  term: School of Medicine; Department of Surgery; Division of Plastic and Reconstructive Surgery
+  active: true
+  short_label: Division of Plastic and Reconstructive Surgery
+- id: Division of Practice Advancement and Clinical Education
+  term: Eshelman School of Pharmacy; Division of Practice Advancement and Clinical Education
+  active: true
+  short_label: Division of Practice Advancement and Clinical Education
 - id: Division of Pulmonary Diseases and Critical Care Medicine
   term: School of Medicine; Department of Medicine; Division of Pulmonary Diseases and Critical Care Medicine
   active: true
@@ -1372,10 +1392,18 @@ terms:
   term: School of Education; School Counseling Graduate Program
   active: true
   short_label: School Counseling Graduate Program
-- id: School of Dentistry
-  term: School of Dentistry
+- id: School of Civic Life and Leadership
+  term: School of Civic Life and Leadership
   active: true
-  short_label: School of Dentistry
+  short_label: School of Civic Life and Leadership
+- id: School of Data Science and Society
+  term: School of Data Science and Society
+  active: true
+  short_label: School of Data Science and Society
+- id: School of Dentistry
+  term: Adams School of Dentistry
+  active: true
+  short_label: Adams School of Dentistry
 - id: School of Education
   term: School of Education
   active: true
@@ -1548,6 +1576,22 @@ terms:
   term: School of Medicine; UNC/NCSU Joint Department of Biomedical Engineering
   active: true
   short_label: UNC/NCSU Joint Department of Biomedical Engineering
+- id: UNC Project-Liberia
+  term: School of Medicine; UNC Project-Liberia
+  active: true
+  short_label: UNC Project-Liberia
+- id: UNC Project-Nicaragua
+  term: School of Medicine; UNC Project-Nicaragua
+  active: true
+  short_label: UNC Project-Nicaragua
+- id: UNC Project-Vietnam
+  term: School of Medicine; UNC Project-Vietnam
+  active: true
+  short_label: UNC Project-Vietnam
+- id: UNC Project-Zambia
+  term: School of Medicine; UNC Project-Zambia
+  active: true
+  short_label: UNC Project-Zambia
 - id: University of North Carolina at Chapel Hill. Graduate School
   term: University of North Carolina at Chapel Hill. Graduate School
   active: true
