--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -96,7 +96,7 @@ services:
     image: solr:9
     user: "8983:8983"
     volumes:
-      - ./solr/config:/opt/solr/server/solr/configsets/hy-c
+      - ./solr/config:/opt/solr/server/solr/configsets/hy-c/conf
       - solr-data:/var/solr/data
     ports:
       - "8983:8983"
@@ -104,6 +104,7 @@ services:
       bash -c "
       mkdir -p /var/solr/data &&
       chown -R 8983:8983 /var/solr &&
+      chown -R 8983:8983 /var/solr/data &&
       gosu solr precreate-core hydra-development /opt/solr/server/solr/configsets/hy-c &&
       gosu solr precreate-core hydra-test /opt/solr/server/solr/configsets/hy-c &&
       gosu solr solr -f
