--- a/docker/.env
+++ b/docker/.env
@@ -7,7 +7,7 @@ HYRAX_DATABASE_PASSWORD=password
 HYRAX_HOST=https://localhost:3000
 REDIS_HOST=redis
 REDIS_URL=redis://redis:6379/0
-SOLR_DEV_URL=http://solr8:8983/solr/hydra-development
-SOLR_TEST_URL=http://solr8:8983/solr/hydra-test
+SOLR_DEV_URL=http://solr:8983/solr/hydra-development
+SOLR_TEST_URL=http://solr:8983/solr/hydra-test
 RIIIF_CACHE_PATH=/opt/hyrax/riiif_cache
 RAILS_CACHE_PATH=/opt/rails-cache
