--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -69,7 +69,7 @@ jobs:
           --health-timeout 5s
         ports: ["5432:5432"]
       solr:
-        image: solr:8.11-slim
+        image: solr:9
         ports:
           - 8983:8983
         options: >-
