--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -68,12 +68,6 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
         ports: ["5432:5432"]
-      solr:
-        image: solr:9
-        ports:
-          - 8983:8983
-        options: >-
-          --name solr_container
       clamavd:
         image: lokori/clamav-java
         ports:
@@ -124,11 +118,18 @@ jobs:
       run: |
         psql -c 'create database hyrax_test with owner hyrax;'
 
-    - name: Copy solr config into docker container
-      run: docker cp solr/config solr_container:/tmp/solr_config
+    - name: Make directory for solr config
+      run: mkdir -p /tmp/solr-config
 
-    - name: Create Solr core
-      run: docker exec solr_container solr create -c hydra-test -d /tmp/solr_config
+    # Need to copy the config is outside of the source path, otherwise it produces permission conflicts
+    - name: Copy Solr Config into container
+      run: sudo cp -r ${{ github.workspace }}/solr/config /tmp/solr-config/
+
+    - name: Run solr container as command to trigger core creation
+      run: |
+        docker run -v /tmp/solr-config:/opt/solr/server/solr/configsets/hy-c/ \
+            -d --rm -p 8983:8983 solr:9 \
+            solr-precreate hydra-test -d /opt/solr/server/solr/configsets/hy-c/
 
     - name: Run rspec tests
       run: bundle exec rspec
