--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -136,7 +136,7 @@ jobs:
       run: docker exec solr_container solr create_core -c hydra-test -d /var/solr/configsets/hy-c
 
     - name: Run rspec tests
-      run: bundle exec rspec
+      run: bundle exec rspec spec/renderers/hyrax/renderers/person_attribute_renderer_spec.rb
       env:
         REDIS_URL: redis://redis
         POSTGRES_USER: hyrax
