--- a/config/authorities/departments.yml
+++ b/config/authorities/departments.yml
@@ -321,7 +321,7 @@ terms:
   active: true
   short_label: Curriculum in Peace, War, and Defense
 - id: Curriculum in Russian and East European Studies
-  term: College of Arts and Sciences; Center for Slavic; Eurasian; and East European Studies; Curriculum in Russian and East European Studies
+  term: College of Arts and Sciences; Center for Slavic, Eurasian, and East European Studies; Curriculum in Russian and East European Studies
   active: true
   short_label: Curriculum in Russian and East European Studies
 - id: Curriculum in Toxicology
@@ -1089,7 +1089,7 @@ terms:
   active: true
   short_label: Injury Prevention Research Center
 - id: IAM
-  term: Institute for Advanced Materials; Nanoscience and Technology
+  term: Institute for Advanced Materials, Nanoscience and Technology
   active: false
   short_label: IAM
 - id: Institute for Advanced Materials, Nanoscience and Technology
