Listen for new tinymce fields

--- a/config/tinymce.yml
+++ b/config/tinymce.yml
@@ -46,11 +46,10 @@ rich_text:
   setup: |
     function (editor) {
       const observer = new MutationObserver((mutationList) => {
-    console.log(mutationList)
         mutationList.forEach((mutation) => {
-    console.log(mutation.type)
           if (mutation.type == "childList") {
             mutation.addedNodes.forEach((node) => {
+              console.log(node)
               if (node instanceof Element) {
                 if (node.matches(".tinymce")) {
     console.log('dean')
