--- a/config/tinymce.yml
+++ b/config/tinymce.yml
@@ -49,9 +49,8 @@ rich_text:
         mutationList.forEach((mutation) => {
           if (mutation.type == "childList") {
             mutation.addedNodes.forEach((node) => {
-              console.log(node)
               if (node instanceof Element) {
-
+                  console.log('boo')
                   tinymce.init({selector: 'textarea', plugins: 'advlist link image lists'});
 
               }
